experimenting with css for sidebar to prevent content shift

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,6 +80,8 @@ a:hover {
 }
 
 .article_nav {
+  width: 100%;
+  max-width: 300px;
   padding-left: 10px;
   font-size: 80%;
 }
